Fix whitespace in front page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,11 +24,6 @@
   }
 }
 
-.index-subjects-container {
-  background-color: #efefef;
-  margin-top: 160px;
-}
-
 .subjects-panel {
   padding-bottom: 26px;
 }
